--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,6 @@ repo_trophies:
 # -----------------------------------------------------------------------------
 # GitHub Link
 # -----------------------------------------------------------------------------
-github_username: "edw2n"
-
 
 # -----------------------------------------------------------------------------
 # RSS Feed
@@ -81,7 +79,7 @@ dblp_url: # your DBLP profile url
 discord_id: # your discord id (18-digit unique numerical identifier)
 facebook_id: # your facebook id
 flickr_id: # your flickr id
-github_username: # your GitHub user name
+github_username: edw2n
 gitlab_username: # your GitLab user name
 ieee_id: # your ieeexplore.ieee.org/author/id
 instagram_id: # your instagram id
