--- a/_data/venues.yml
+++ b/_data/venues.yml
@@ -10,6 +10,10 @@
 
 # "Virtual Try-On":
 
+"ICLR":
+  url: https://iclr.cc/
+  color: "#1976D2"
+
 "CVPR":
   url: https://cvpr.thecvf.com
   color: "#009f36"
